force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/tc9_pr__Pay_Code_Junction__c.object-meta.xml
<CustomObject>
    <description>A junction object between the Pay Code and various child objects Allows for a many to many relationship.</description>
    <label>Pay Code Junction</label>
    <nameField>
        <displayFormat>PCJ-{0000000000}</displayFormat>
        <label>Pay Code Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Code Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>