force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/fields/tc9_core__Pay_Rate_Loading__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Pay_Rate_Loading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Pay Code Junction to a Pay Rate Loading.</description>
    <inlineHelpText>Relates the Pay Code Junction to a Pay Rate Loading.</inlineHelpText>
    <label>Pay Rate Loading</label>
    <referenceTo>tc9_et__PayRate_Loading__c</referenceTo>
    <relationshipLabel>Pay Code Junctions</relationshipLabel>
    <relationshipName>Pay_Code_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>