force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/fields/tc9_core__Pay_Rate_Loading_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>tc9_core__Pay_Rate_Loading_Template_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the Pay Code Junction to a Template Group.</description>
    <inlineHelpText>Relates the Pay Code Junction to a Template Group.</inlineHelpText>
    <label>Pay Rate Loading Template Group</label>
    <referenceTo>tc9_pr__Template_Group__c</referenceTo>
    <relationshipLabel>Pay Code Junctions</relationshipLabel>
    <relationshipName>Pay_Code_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>