force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/fields/tc9_pr__Leave_Rule__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the Leave Rule that relates to the Pay Code Junction record</description>
    <inlineHelpText>Defines the Leave Rule that relates to the Pay Code Junction record</inlineHelpText>
    <label>Leave Rule</label>
    <referenceTo>tc9_pr__Leave_Rule__c</referenceTo>
    <relationshipLabel>Pay Code Junctions</relationshipLabel>
    <relationshipName>Pay_Code_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>