force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/recordTypes/tc9_core__Pay_Rate_Loading.recordType-meta.xml
<RecordType>
    <fullName>tc9_core__Pay_Rate_Loading</fullName>
    <active>true</active>
    <description>Used for Pay Rate Loading junctions</description>
    <label>Pay Rate Loading</label>
</RecordType>