force-app/main/default/objects/tc9_pr__Pay_Code_Junction__c/recordTypes/tc9_pr__Leave_Accrual.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Leave_Accrual</fullName>
    <active>true</active>
    <description>Used for Leave Rule accrual junctions</description>
    <label>Leave Accrual</label>
</RecordType>